solucionado problema de npm run live para windows

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bower": "./node_modules/bower/bin/bower",
-    "live": "./node_modules/live-server/live-server.js",
-    "pro": "./node_modules/vulcanize/bin/vulcanize lib/lib.html > dist/bundle.html",
+    "bower": "node ./node_modules/bower/bin/bower",
+    "live": "node ./node_modules/live-server/live-server.js",
+    "pro": "node ./node_modules/vulcanize/bin/vulcanize lib/lib.html > dist/bundle.html",
     "publish": "npm publish --registry=http://localhost:8081/repository/npm-internal/"
   },
   "keywords": [],
